--- a/WS/src/app/components/servicio/servicio.component.html
+++ b/WS/src/app/components/servicio/servicio.component.html
@@ -198,5 +198,23 @@
       </p>
     </div>
   </div>-->
+  <div class="clima">
+    <p *ngIf="weather.length == 0">Searching...</p>
+    <div *ngIf="weather.length > 0">
+        <table style="width: 100%; text-align: center">
+            <thead></thead>
+            <tbody>
+                <tr>
+                    <td *ngFor="let forecast of weather">
+                        <img [src]="forecast.iconLink" />
+                        <p>{{ forecast.highTemperature }}C</p>
+                        <p>{{ forecast.utcTime | moment }}</p>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
+
 
 <a [routerLink]="['/servicioss']" class="btn btn-outline-danger btn-block">Regresar</a>
