--- a/WS/src/app/components/servicio/servicio.component.html
+++ b/WS/src/app/components/servicio/servicio.component.html
@@ -61,7 +61,7 @@
         </p>
         <p>
             <span class="subtitulo">Hora Final:</span>
-          {{ item.horaFinal }}
+          {{ item.horaFin }}
         </p>
       </div>
 
