--- a/WS/src/app/components/crearservicio/crearservicio.component.html
+++ b/WS/src/app/components/crearservicio/crearservicio.component.html
@@ -312,6 +312,25 @@
         <input type="text" formControlName="cantidadplatos" class="form-control"
           [ngClass]="{ 'is-invalid': submitted && f.cantidadplatos.errors }" />
       </div>
+
+      <div class="form-group">
+        <label>Inserte lugar o dirección donde se encuentra el servicio</label>
+        <p>*Si colocas un lugar válido, mostraremos las reviews dadas por google !</p>
+        <input type="text" class="form-control" (keydown.enter)="$event.preventDefault()"
+          placeholder="Search Nearest Location" autocorrect="off" autocapitalize="off" spellcheck="off" type="text"
+          #search>
+      </div>
+
+      <agm-map [latitude]="latitude" [longitude]="longitude" [zoom]="zoom" (mapClick) = moverMarcador($event)>
+        <agm-marker [latitude]="latitude" [longitude]="longitude" [markerDraggable]="true"
+          (dragEnd)="markerDragEnd($event)"></agm-marker>
+      </agm-map>
+      <br>
+      <h5>Address: {{address}}</h5>
+      <div>Latitude: {{latitude}}</div>
+      <div>Longitude: {{longitude}}</div>
+      <div>Id: {{placeid}}</div>
+      <br>
     </div>
 
     <div *ngIf="this.tipoServicio == 'Alojamiento'">
@@ -361,6 +380,26 @@
           <option value="No">No</option>
         </select>
       </div>
+
+      <div class="form-group">
+        <label>Inserte lugar o dirección donde se encuentra el alojamiento</label>
+        <p>*Si colocas un lugar válido, mostraremos las reviews dadas por google !</p>
+        <input type="text" class="form-control" (keydown.enter)="$event.preventDefault()"
+          placeholder="Search Nearest Location" autocorrect="off" autocapitalize="off" spellcheck="off" type="text"
+          #search>
+      </div>
+
+      <agm-map [latitude]="latitude" [longitude]="longitude" [zoom]="zoom" (mapClick) = moverMarcador($event)>
+        <agm-marker [latitude]="latitude" [longitude]="longitude" [markerDraggable]="true"
+          (dragEnd)="markerDragEnd($event)"></agm-marker>
+      </agm-map>
+      <br>
+      <h5>Address: {{address}}</h5>
+      <div>Latitude: {{latitude}}</div>
+      <div>Longitude: {{longitude}}</div>
+      <div>Id: {{placeid}}</div>
+      <br>
+
     </div>
 
     <div *ngIf="this.tipoServicio == 'Transporte'">
@@ -411,7 +450,29 @@
           [ngClass]="{ 'is-invalid': submitted && f.horafin.errors }" />
       </div>
 
+      <div class="form-group">
+        <label>Origen y destino del recorrido</label>
+        <input type="text" class="form-control" (keydown.enter)="$event.preventDefault()"
+          placeholder="Search Nearest Location" autocorrect="off" autocapitalize="off" spellcheck="off" type="text"
+          #search>
+      </div>
 
+      <agm-map [latitude]="latitude" [longitude]="longitude" [zoom]="zoom">
+        <agm-marker [latitude]="latitude1" [longitude]="longitude1" [markerDraggable]="true" [iconUrl]="" [label]="origen"
+          (dragEnd)="markerDragEnd1($event)"></agm-marker>
+        <agm-marker [latitude]="latitude2" [longitude]="longitude2" [markerDraggable]="true" [label]="destino"
+          (dragEnd)="markerDragEnd2($event)"></agm-marker>
+      </agm-map>
+      <br>
+      <h5>Direccion origen: {{address1}}</h5>
+      <div>Latitude origen: {{latitude1}}</div>
+      <div>Longitude origen: {{longitude1}}</div>
+      <div>Id origen: {{placeid1}}</div>
+      <h5>Direccion destino: {{address2}}</h5>
+      <div>Latitude destino: {{latitude2}}</div>
+      <div>Longitude destino: {{longitude2}}</div>
+      <div>Id destino: {{placeid2}}</div>
+      <br>
     </div>
 
     <div *ngIf="this.tipoServicio == 'PaseoEcologico'">
@@ -435,6 +496,30 @@
 
 
       <div class="form-group">
+        <label>Origen y destino del recorrido</label>
+        <input type="text" class="form-control" (keydown.enter)="$event.preventDefault()"
+          placeholder="Search Nearest Location" autocorrect="off" autocapitalize="off" spellcheck="off" type="text"
+          #search>
+      </div>
+
+      <agm-map [latitude]="latitude" [longitude]="longitude" [zoom]="zoom">
+        <agm-marker [latitude]="latitude1" [longitude]="longitude1" [markerDraggable]="true" [iconUrl]="" [label]="origen"
+          (dragEnd)="markerDragEnd1($event)"></agm-marker>
+        <agm-marker [latitude]="latitude2" [longitude]="longitude2" [markerDraggable]="true" [label]="destino"
+          (dragEnd)="markerDragEnd2($event)"></agm-marker>
+      </agm-map>
+
+      <h5>Direccion origen: {{address1}}</h5>
+      <div>Latitude origen: {{latitude1}}</div>
+      <div>Longitude origen: {{longitude1}}</div>
+      <div>Id origen: {{placeid1}}</div>
+      <h5>Direccion destino: {{address2}}</h5>
+      <div>Latitude destino: {{latitude2}}</div>
+      <div>Longitude destino: {{longitude2}}</div>
+      <div>Id destino: {{placeid2}}</div>
+
+      <br>
+      <div class="form-group">
         <label for="horainicio">Hora inicio</label>
         <input type="time" formControlName="horainicio" class="form-control"
           [ngClass]="{ 'is-invalid': submitted && f.horainicio.errors }" />
@@ -447,26 +532,6 @@
       </div>
 
     </div>
-
-    <div class="form-group">
-      <label>Enter address</label>
-      <input type="text" class="form-control" (keydown.enter)="$event.preventDefault()"
-        placeholder="Search Nearest Location" autocorrect="off" autocapitalize="off" spellcheck="off" type="text"
-        #search>
-    </div>
-
-    <agm-map [latitude]="latitude" [longitude]="longitude" [zoom]="zoom" (mapClick) = moverMarcador($event)>
-      <agm-marker [latitude]="latitude" [longitude]="longitude" [markerDraggable]="true"
-        (dragEnd)="markerDragEnd($event)"></agm-marker>
-    </agm-map>
-
-    <h5>Address: {{address}}</h5>
-    <div>Latitude: {{latitude}}</div>
-    <div>Longitude: {{longitude}}</div>
-    <div>Id: {{placeid}}</div>
-
-
-
 
     <div class="form-group">
       <button class="btn btn-outline-success mx-auto d-block">Crear servicio</button>
