--- a/WS/src/app/components/editarservicio/editarservicio.component.html
+++ b/WS/src/app/components/editarservicio/editarservicio.component.html
@@ -82,7 +82,7 @@
 
               <div>
                       <label for="horafin">Hora final:</label>
-                      <input type="time" class="form-control" id="horafin" [(ngModel)]="item.horaFinal" >
+                      <input type="time" class="form-control" id="horafin" [(ngModel)]="item.horaFin" >
               </div>
 
       </div>
