--- a/WS/src/app/components/mostrarservicio/servicioss/servicioss.component.html
+++ b/WS/src/app/components/mostrarservicio/servicioss/servicioss.component.html
@@ -29,7 +29,7 @@
   <div class="row">
     <div class="col-md-12">
       <div class="card-columns">
-        <app-servicio-tarjeta [servicio]="foo" [index]="foo.Id" *ngFor="let foo of serviciosCopia; let i = index">
+        <app-servicio-tarjeta [servicio]="foo" [index]="foo.id" *ngFor="let foo of serviciosCopia; let i = index">
         </app-servicio-tarjeta>
       </div>
     </div>
