--- a/WS/src/app/components/serviciosproveedor/serviciosproveedor.component.html
+++ b/WS/src/app/components/serviciosproveedor/serviciosproveedor.component.html
@@ -3,7 +3,7 @@
     <div class="col-md-12">
       <div class="card-columns">
 
-        <app-servicio-tarjeta [servicio]="foo" [index]="foo.Id" *ngFor="let foo of servicios; let i = index"></app-servicio-tarjeta>
+        <app-servicio-tarjeta [servicio]="foo" [index]="foo.id" *ngFor="let foo of servicios; let i = index"></app-servicio-tarjeta>
 
 
       </div>
