--- a/WS/src/app/components/profile/profile.component.html
+++ b/WS/src/app/components/profile/profile.component.html
@@ -34,7 +34,7 @@
 
         <div>
             <label for="password">Contraseña:</label>
-            <input type="password" class="form-control" id="password" [(ngModel)]="item.password">
+            <input type="password" class="form-control" id="password" [(ngModel)]="item.contrasena">
         </div>
 
 
