--- a/WS/src/app/components/crearservicio/crearservicio.component.html
+++ b/WS/src/app/components/crearservicio/crearservicio.component.html
@@ -269,7 +269,7 @@
         [ngClass]="{ 'is-invalid': submitted && f.descripcion.errors }" />
     </div>
     <div class="form-group">
-      <label for="costo">Costo</label>
+      <label for="costo">Costo (USD)</label>
       <input type="number" formControlName="costo" class="form-control"
         [ngClass]="{ 'is-invalid': submitted && f.costo.errors }" />
     </div>
