mapa en servicio

--- a/WS/src/app/components/servicio/servicio.component.html
+++ b/WS/src/app/components/servicio/servicio.component.html
@@ -39,6 +39,12 @@
             <span class="subtitulo">Cantidad de platos:</span>
           {{ item.cantidadPlatos }}
         </p>
+
+        <agm-map [latitude]="item.latitud" [longitude]="item.longitud" [zoom]="zoom">
+          <agm-marker [latitude]="latitude" [longitude]="longitude" [markerDraggable]="false" ></agm-marker>
+          <agm-marker [latitude]="item.latitud" [longitude]="item.longitud" [markerDraggable]="false" []></agm-marker>
+        </agm-map>
+
       </div>
 
 
