--- a/WS/src/app/components/servicio/servicio.component.html
+++ b/WS/src/app/components/servicio/servicio.component.html
@@ -42,7 +42,7 @@
 
         <agm-map [latitude]="item.latitud" [longitude]="item.longitud" [zoom]="zoom">
           <agm-marker [latitude]="latitude" [longitude]="longitude" [markerDraggable]="false" ></agm-marker>
-          <agm-marker [latitude]="item.latitud" [longitude]="item.longitud" [markerDraggable]="false" []></agm-marker>
+          <agm-marker [latitude]="item.latitud" [longitude]="item.longitud" [markerDraggable]="false"></agm-marker>
         </agm-map>
 
       </div>
