--- a/WS/src/app/components/servicio/servicio.component.html
+++ b/WS/src/app/components/servicio/servicio.component.html
@@ -43,6 +43,7 @@
         <agm-map [latitude]="item.latitud" [longitude]="item.longitud" [zoom]="zoom">
           <agm-marker [latitude]="latitude" [longitude]="longitude" [markerDraggable]="false" [label]="posicion" ></agm-marker>
           <agm-marker [latitude]="item.latitud" [longitude]="item.longitud" [markerDraggable]="false" [label]="alimentacion"> </agm-marker>
+          <agm-direction [origin]="origin" [destination]="destination"></agm-direction>
         </agm-map>
 
       </div>
